--- a/style.css
+++ b/style.css
@@ -1,1 +1,11 @@
-
+body {
+    color: rgb(157, 7, 7);
+    font-size: 100px;
+    font-family: 'Trebuchet MS', sans-serif;
+    text-align: center;
+    text-shadow: 10px 10px 10px #6f0b1f;
+}
+hr {
+    height: 100px;
+    background-color: #2c0f84;
+}
